[build_sphinx]
source-dir = docs
build-dir = doc/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = fisspy
description = FISSPy: Python package for GST/FISS instrument
author = SNU Solar Grup
author_email = jhkang@astro.snu.ac.kr
license = BSD
url = http://fiss.snu.ac.kr/
edit_on_github = True
github_project = SNU-sunday/fisspy
